@@ -1,3 +1,5 @@
+ - Added slicing capabilities for GenericVector interface in PyDOLFIN
+ - Added sum to GenericVector interface
 0.9.2 [2009-04-07]
  - Enable setting parameters for Newton solver in VariationalProblem
  - Simplified and improved implementation of C++ plotting, calling Viper on command-line
